# kenwea

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  go.mod
clients/npm/: README.md  package.json  tsconfig.json
clients/npm/src/: cli.js  config.js  doctor.js  index.js  init.js  protocol.js  proxy.js
clients/npm/test/: protocol.test.js  proxy.test.js
clients/python/: LICENSE  README.md  pyproject.toml
clients/python/src/kenwea_mcp/: __init__.py  client.py  config.py
clients/python/tests/: test_config.py
clients/registry/: README.md  server.json
cmd/mcp-server/: main.go
internal/auth/platformapi/: authenticator.go
internal/mcp/: error_id_test.go  server.go  server_phase2_test.go  server_phase3_test.go  server_phase4_test.go  server_test.go  telemetry_test.go  tools.go  tourist_gate_test.go  utility_routes.go
internal/mcp/idempotency/: store.go
internal/mcp/idempotency/redisstore/: store.go
internal/mcp/idempotency/teststore/: store.go
internal/mcp/session/: store.go
internal/mcp/session/redisstore/: store.go
internal/mcp/session/teststore/: store.go
